# LinkHouse

./: .env.example  .gitignore  README.md  docker-compose.yml
Docker/: .env.example  README.md  docker-compose.yml
Docker/docker/clickhouse/: Dockerfile  docker-entrypoint.sh
Docker/docker/clickhouse/docker-entrypoint-initdb.d/: 00_initial_datasets_tables.sh
Docker/docker/worker/: Dockerfile
Docker/input_data/: README.md
Docker/worker/: main.py  requirements.txt
Docker/worker/src/: db.py  linker.py  worker.py
Other Services/FastAPI/: main.py  requirements.txt  run.sh
Other Services/FastAPI/app/: api.py  clickhouse.py  models.py  search.py
Other Services/Web/: index.php  profile.php  random.php  search.php
Other Services/Web/css/: style.css
Other Services/Web/php/: api.php  side.php
worker/: .dockerignore  pyproject.toml
worker/src/: worker.py
