[tool.poetry]
name = "worker"
version = "0.1.0"
description = ""
authors = ["zguydev <zguy@zguy.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
clickhouse-connect = "^0.8.0"
loguru = "^0.7.2"
polars = "^1.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
